--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "picklify": "github:lwoites/picklify",
     "request": "^2.88.2"
   },
