--- a/Unqfy-Sys/package.json
+++ b/Unqfy-Sys/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "picklify": "github:lwoites/picklify",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
