--- a/Unqfy-Sys/package.json
+++ b/Unqfy-Sys/package.json
@@ -18,6 +18,7 @@
     "mocha": "^5.0.5"
   },
   "scripts": {
+    "start": "node src/api/Service.js",
     "test": "mocha",
     "eslint": "node_modules/.bin/eslint *.js"
   },
